Update Page Titles

--- a/CollegeApp/Views/Bill/GenerateBill.cshtml
+++ b/CollegeApp/Views/Bill/GenerateBill.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CollegeApp.Models.Billlocal>
 
 @{
-    ViewData["Title"] = "GenerateBill";
+    ViewData["Title"] = "Confirm Sale";
 }
 
 <div class="card mt-4">
