--- a/CollegeApp/Views/Bill/Index.cshtml
+++ b/CollegeApp/Views/Bill/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model IEnumerable<CollegeApp.Models.Billlocal>
 
+@{
+    ViewData["Title"] = "Generate Bill";
+}
 
 <div class="mt-2 mb-4 flex-column">
     <p class="m-0">Add an item to the bill.</p>
