--- a/CollegeApp/Views/Login/Login.cshtml
+++ b/CollegeApp/Views/Login/Login.cshtml
@@ -58,7 +58,8 @@
 </head>
 
 <body>
-    <div class="global-container">
+    <div class="global-container d-flex flex-column">
+        <h1>Stationary Management System</h1>
         <div class="card login-form">
             <div class="card-body">
                 <h3 class="card-title text-center">Login</h3>
