--- a/CollegeApp/Views/Product/Index.cshtml
+++ b/CollegeApp/Views/Product/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<CollegeApp.Models.Product>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Products";
 }
 
 <div class="my-2">
