--- a/CollegeApp/Views/BillDetails/Index.cshtml
+++ b/CollegeApp/Views/BillDetails/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CollegeApp.Models.Bill>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Past Bills";
 }
 <h2>Past Bills</h2>
 <table id="example" class="table table-striped table-bordered" style="width:100%">
