--- a/stationary_management_system/Views/Bill/Index.cshtml
+++ b/stationary_management_system/Views/Bill/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CollegeApp.Models.Billlocal>
+﻿@model IEnumerable<stationary_management_system.Models.Billlocal>
 
 @{
     ViewData["Title"] = "Generate Bill";
