--- a/stationary_management_system/Views/Product/Index.cshtml
+++ b/stationary_management_system/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CollegeApp.Models.Product>
+﻿@model IEnumerable<stationary_management_system.Models.Product>
 @{
     ViewData["Title"] = "Products";
 }
