--- a/stationary_management_system/Views/BillDetails/Index.cshtml
+++ b/stationary_management_system/Views/BillDetails/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CollegeApp.Models.Bill>
+﻿@model IEnumerable<stationary_management_system.Models.Bill>
 
 @{
     ViewData["Title"] = "Past Bills";
